DevOps-Portfolio-Cluster_Resources/applications/contact-book/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contact-book
spec:
  replicas: 2
  selector:
    matchLabels:
      app: contact-book
  template:
    metadata:
      labels:
        app: contact-book
    spec:
      containers:
        - name: contact-book
          image: 451626663367.dkr.ecr.ap-south-1.amazonaws.com/development/contact_book:1.0.30
          ports:
            - containerPort: 5000
