DevOps-Portfolio-Cluster_Resources/applications/contact-book/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contact-book
spec:
  ingressClassName: nginx
  rules:
    # host: example.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: contact-book
                port:
                  number: 80
